--- a/source/index.html
+++ b/source/index.html
@@ -22,16 +22,16 @@
           <picture>
             <source type="image/webp" srcset="images/table@1x.webp 1x, images/table@2x.webp 2x" width="332"
               height="144">
-            <img class="hero__image hero__image1" src="images/table@1x.jpg" srcset="images/table@2x.jpg 2x" width="503"
+            <img class="hero__image hero__image--table" src="images/table@1x.jpg" srcset="images/table@2x.jpg 2x" width="503"
               height="335" alt="Стол.">
           </picture>
           <picture>
             <source type="image/webp" srcset="images/legs@1x.webp 1x, images/legs@2x.webp 2x" width="332" height="144">
-            <img class="hero__image hero__image2" src="images/legs@1x.jpg" srcset="images/legs@2x.jpg 2x" width="503"
+            <img class="hero__image hero__image--legs" src="images/legs@1x.jpg" srcset="images/legs@2x.jpg 2x" width="503"
               height="335" alt="Ножки стола.">
           </picture>
-          <button id="upButton" class="hero__button" type="button">вверх</button>
-          <button id="downButton" class="hero__button" type="button">вниз</button>
+          <button class="hero__button" id="up-button" type="button">вверх</button>
+          <button class="hero__button" id="down-button" type="button">вниз</button>
         </div>
         <p class="hero__description">Также столешница, обладающая меламиновым покрытием, хорошо переносит механические
           воздействия (царапины или удары), при контакте с водой не разрушается, устойчиво переносит бытовые химические
@@ -39,8 +39,8 @@
       </div>
     </section>
   </main>
-  <div id="modal" class="modal">
-    <div id="modal-wrapper" class="modal__wrapper">
+  <div class="modal" id="modal">
+    <div class="modal__wrapper" id="modal-wrapper">
       <p class="modal__description">При удержании кнопки в течение 1-ой секунды происходит прокрутка до минимального или
         максимального значения. Клик по кнопке приведёт к смещению стола на один шаг (1px)</p>
       <p class="modal__badge">Развлекайтесь!</p>
