--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Table</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="imagetoolbar" content="no" />
   <link rel="preload" href="#" type="font/woff2" as="font">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
